# brf_sync_tools

./: CMakeLists.txt  README.md  brfAnimation.cpp  brfAnimation.h  brfBody.cpp  brfBody.h  brfData.cpp  brfData.h  brfData_compat.h  brfHitBox_stub.cpp  brfJson_sync.cpp  brfJson_sync.h  brfMesh.cpp  brfMesh.h  brfShader.cpp  brfShader.h  brfSkeleton.cpp  brfSkeleton.h  brfTexture.cpp  build_sync_standalone.bat  ioMD3.cpp  ioMD3.h  ioOBJ_sync.cpp  ioSMD.cpp  ioSMD.h  main_sync_standalone.cpp  saveLoad.cpp  vcgmesh_stub.cpp
dependencies/vcglib/vcg/complex/algorithms/: curve_on_manifold.h  quadrangulator.h  refine.h  refine_loop.h
dependencies/vcglib/vcg/space/index/: spatial_hashing.h  spatial_hashing2d.h
dependencies/vcglib/wrap/dae/: util_dae.h
